src/objects/Absence_Request__c.object
<CustomObject>
    <description>Dummy absence request object - mimics standard object in HCM</description>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Start_Date__c +  Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Absence_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Absence Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Duration__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ABSREQ-{000000}</displayFormat>
        <label>Absence Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absence Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>